--- a/templates/index.html
+++ b/templates/index.html
@@ -139,25 +139,23 @@
                                                                                                                                                                                                                    
     <div class="container">
         <div class="iframe-container">
-            <iframe src="https://morganvalleyradio.intellidwell.net/public/morganvalleyradio/embed?theme=dark" frameborder="0" allowtransparency="true" style="width: 100%; min-height: 150px; border: 0;"></iframe>
+            <!--insert azuracast streaming html here-->
         </div>
                                                                                                                                                                                                                    
         <h2 class="subheading">For Android and iPhone (Including CarPlay and Android Auto)</h2>
-        <a href="https://mytuner-radio.com/radio/morgan-valley-radio-channel-497235/" class="mytuner-button" target="_blank">
+        <a href="MYTUNER LINK" class="mytuner-button" target="_blank">
             <img src="{{ url_for('static', filename='mytuner-logo.png') }}" >
             Listen on myTuner Radio
         </a>
                                                                                                                                                                                                                    
         <h2 class="subheading">History</h2>
         <div class="iframe-container">
-            <iframe src="https://morganvalleyradio.intellidwell.net/public/morganvalleyradio/history?theme=dark" frameborder="0" allowtransparency="true" style="width: 100%; min-height: 300px; border: 0;"></ifra
-me>
+            <!--insert azuracast history html here-->
         </div>
                                                                                                                                                                                                                    
         <h2 class="subheading">Request A Song</h2>
         <div class="iframe-container">
-            <iframe src="https://morganvalleyradio.intellidwell.net/public/morganvalleyradio/embed-requests?theme=dark" frameborder="0" allowtransparency="true" style="width: 100%; min-height: 850px; border: 0;"
-></iframe>
+            <!--insert azuracast requests html here-->
         </div>
     </div>
 </body>
